corr3ezioni prima pagina

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ title: "Monserrat Olavarria"
         </a>
       </div>
       <div class="masonry-item">
-        <a href="/tiritinlalla/">
+        <a href="/dischi/tiritinlalla/">
           <img src="/image/tiritinlalla_1980.jpg" alt="tiritinlala" width="100%" class="masonry-content" />
         </a>
       </div>
@@ -160,7 +160,7 @@ title: "Monserrat Olavarria"
 <!-- ripetizione  -->
 
 <div class="masonry-item">
-  <a href="/tiritinlalla/">
+  <a href="/dischi/tiritinlalla/">
     <img src="/image/tiritinlalla_1980.jpg" alt="tiritinlala" width="100%" class="masonry-content" />
   </a>
 </div>
